# tog

./: .claudeignore  .gitignore  .mocharc.json  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  README.md  TODO.md  eslint.config.js  eslint.config.mjs  package.json  test.config.md  tog.cabal  tsconfig.json  tsconfig.tsbuildinfo
.claude/: rules.md  settings.json
.github/workflows/: build.yml  ci.yml  lint.yml  test.yml
docs/: AI_DEVELOPMENT.md  ARCHITECTURE_SIMPLIFICATION.md  DEVELOPMENT.md  ONBOARDING.md  RELEASE.md  TROUBLESHOOTING.md
docs/prd/: 0001-basic-toggl-client.md  0002-init-command.md  0003-ping-command.md  0004-start-stop-timer.md  0005-enhanced-cli-ux.md  0006-current-timer-status.md  0007-workspace-listing-commands.md  0008-searchable-selection.md  0009-quick-start-timer.md  0010-timer-edit-command.md  0011-today-summary-command.md  0012-continue-last-timer.md  0013-weekly-summary.md  0014-time-entry-search.md
legacy/: tsconfig.json
legacy/test/: setup.ts  tsconfig.json
src/: Main.hs  cli.ts
src/api/: client.ts
src/commands/: clients.ts  continue.ts  current.ts  edit.ts  init.ts  nuke.ts  ping.ts  projects.ts  search.ts  start.ts  stop.ts  tasks.ts  today.ts  week.ts
src/config/: index.ts  validation.ts
src/lib/: base-command.ts  client-service.ts  config.ts  data-sanitizer.ts  emojis.ts  errors.ts  favorite-service.ts  file-cache.ts  project-service.ts  project-task-selector.ts  prompts.ts  reference-cached-toggl-client.ts  table-formatter.ts  task-service.ts  time-entry-editor.ts  time-entry-service.ts  (+7 more)
test/: mocha.env.js  tsconfig.json
(+76 files in other folders)
