cabal-version:       >=1.10
name:                tog
version:             0.0.1.0
synopsis:            "Toggl utility in Haskell"
description:         "Toggl utility in Haskell"
bug-reports:         https://github.com/toddhainsworth/tog
license-file:        LICENSE
author:              Todd Hainsworth
maintainer:          hainsworth.todd@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable tog
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base >=4.13 && <4.14,
                       hoggl >= 0.2 && < 0.3,
                       aeson >= 1.4 && < 1.5,
                       bytestring >= 0.10 && < 0.11,
                       directory >= 1.3 && < 1.4,
                       filepath >= 1.4 && < 1.5
  hs-source-dirs:      src
  default-language:    Haskell2010
